<resources>
    <string name="app_name">prototype2</string>
    <string name="appName">AI REMDII</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="freeTrial">Try it for free</string>
    <string name="title_activity_user_main_page">userMainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="photo">photo</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeated_password">Repeated Password</string>
    <string name="back">Back</string>
    <string name="processed">Processed</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take Photo</string>

    <string name="selected_item">Selected item:</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Third gender</item>
    </string-array>

    <string name="about">Your E-solution. Reviving your Natural Shield.</string>


</resources>
