<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".bodyPartSelectActivity">

    <ImageButton
        android:id="@+id/backBtn4"
        android:layout_width="28sp"
        android:layout_height="28sp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="353dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/takePhotoBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@color/lightGreen"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bodypart" />

    <Button
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Head"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/neck"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Neck"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/Breast"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Breast"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.257" />

    <Button
        android:id="@+id/upperarm"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Upper Arm"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.239" />

    <Button
        android:id="@+id/waist"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="waist"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.439" />

    <Button
        android:id="@+id/lowerarm2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Lower Arm"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.385" />

    <Button
        android:id="@+id/knee"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="knee"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.737" />

    <Button
        android:id="@+id/upperleg3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="upper leg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.645" />

    <Button
        android:id="@+id/lowerleg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="lower leg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.845" />

    <Button
        android:id="@+id/foot2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="foot"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/elbow"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Elbow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.347" />

    <Button
        android:id="@+id/hand"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="hand"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/Shoulder"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:text="Shoulder"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.177" />

</android.support.constraint.ConstraintLayout>